# thomsible

./: .augment-guidelines  .env.example  .gitignore  BOOTSTRAP.md  CLAUDE.md  README.md  ansible.cfg  bootstrap.sh  bootstrap.yml  bootstrap_local.yml  bootstrap_new.yml  bootstrap_tools.yml  bootstrap_tools_new.yml  bootstrap_tools_only.yml  docker-compose.yml  pyproject.toml  setup_complete.yml  setup_complete_with_tools.yml  setup_with_git.yml  site.yml  site_two_phase.yml  test-with-molecule.md
.codellm/rules/: general.mdc
docs/: architecture.md  bootstrap.md  configuration.md  github-token.md  github_tool_template.md  gitignore-rules.md  roles.md  status.md  technical.md  tools-configuration.md
group_vars/: all.yml  desktop.yml  example_custom_user.yml  server.yml
inventories/desktop/: hosts
inventories/docker/: hosts  hosts_thomsible
inventories/server/: hosts
molecule/: requirements.yml
molecule/common/: Dockerfile.debian  Dockerfile.fedora  Dockerfile.ubuntu
molecule/default/: converge.yml  molecule.yml  prepare.yml  side_effect.yml  verify.yml
molecule/sssd_test/: converge.yml  molecule.yml  prepare.yml  verify.yml
roles/common/: README.md
roles/common/tasks/: fedora_requirements.yml  get_target_user_info.yml
roles/git/: README.md
roles/git/tasks/: main.yml
roles/github_tools/: README.md
roles/github_tools/defaults/: main.yml
roles/github_tools/files/: starship.toml
roles/github_tools/tasks/: check_existing_tools.yml  (+4 more)
roles/ssh_keys/: README.md
roles/thomsible_user/: README.md
roles/user_config/: README.md
tasks/: tasks.md
(+46 files in other folders)
